# kime-web-playground

./: .gitignore  Cargo.toml  Makefile  build.ts  deno.json  download-linux-x64.sh  index.html  index.js  kime_web_bg-BJ3T3BLF.wasm  package.json  pnpm-lock.yaml  swc-minifier.json  tsconfig.json
.cargo/: config.toml
.github/workflows/: build.yaml
js/: build.ts  deps.json  index.html  index.ts  package.json  pnpm-lock.yaml  vite.config.ts
js/src/: index.html  index.ts  live-reload.ts
js/src/kime-web/: mod.ts  wasm.d.ts
kime-web/: Cargo.toml
kime-web/src/: engine.rs  glue_kime.rs  lib.rs  web_input.rs  web_keycode.rs
kime-web/src/helper/: mod.rs  source.rs  util.rs
rust/: Cargo.toml  test.ts
rust/src/: engine.rs  lib.rs  web_keycode.rs
scripts/: build.ts  esbuild-wasm-plugin.ts  fs.ts  runner.ts  url.ts  wasm-build.ts  web-build.ts
web/: dropper.ts  filedrop.ts  index.html  index.ts  layout-from-url.ts
xtask/: Cargo.toml  main.rs
